--- a/ui/style.css
+++ b/ui/style.css
@@ -1,8 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
-    
+    margin-top: 60px;
 }
 
 .center {
@@ -17,6 +15,15 @@ body {
     font-weight: bold;
 }
 
-.img-medium{
+.img-medium {
     height: 200px;
 }
+
+          .container{
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #060606;
+                    font-family: sans-serif;
+                    padding-left: 20px;
+                    padding-right: 20px;
+            } 
