[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
+    margin-top: 60px;
 }
 
 .center {
@@ -17,5 +16,14 @@ body {
 }
 
 .img-medium {
-    height: 20px;
+    height: 200px;
 }
+
+          .container{
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #060606;
+                    font-family: sans-serif;
+                    padding-left: 20px;
+                    padding-right: 20px;
+            } 
