--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
-    margin-top: 60px;
+    background-color: lightgrey;
+    margin-top: 75px;
 }
 
 .center {
@@ -18,12 +19,3 @@ body {
 .img-medium {
     height: 200px;
 }
-
-          .container{
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: #060606;
-                    font-family: sans-serif;
-                    padding-left: 20px;
-                    padding-right: 20px;
-            } 
